[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/dungeon.gd" type="Script" id=3]

[node name="Dungeon" type="Node2D"]
script = ExtResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="Layout" type="TileMap" parent="Navigation2D"]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( -327671, 1, 0, -327670, 0, 0, -327669, 1, 0, -327668, 0, 0, -262137, 0, 0, -262136, 1, 0, -262135, 0, 0, -262134, 1, 0, -262133, 0, 0, -262132, 1, 0, -262131, 0, 0, -262130, 1, 0, -196601, 1, 0, -196599, 1, 0, -196594, 0, 0, -131066, 1, 0, -131065, 0, 0, -131063, 0, 0, -131062, 1, 0, -131061, 0, 0, -131060, 1, 0, -131059, 0, 0, -131058, 1, 0, -131057, 0, 0, -65530, 0, 0, -65529, 1, 0, -65527, 1, 0, -65526, 0, 0, -65525, 1, 0, -65524, 0, 0, -65522, 0, 0, -65521, 1, 0, 6, 1, 0, 7, 0, 0, 9, 0, 0, 10, 1, 0, 11, 0, 0, 12, 1, 0, 14, 1, 0, 15, 0, 0, 65542, 0, 0, 65543, 1, 0, 65544, 0, 0, 65545, 1, 0, 65546, 0, 0, 65547, 1, 0, 65548, 0, 0, 65550, 0, 0, 65551, 1, 0, 131079, 0, 0, 131084, 1, 0, 131086, 1, 0, 196615, 1, 0, 196616, 0, 0, 196617, 1, 0, 196618, 0, 0, 196619, 1, 0, 196620, 0, 0, 196621, 1, 0, 196622, 0, 0, 262153, 0, 0, 262154, 1, 0, 262155, 0, 0, 262156, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 704, 320 )

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="PathIndicator" type="Line2D" parent="."]
texture_mode = 1

[node name="MousePosition" type="RichTextLabel" parent="."]
margin_left = 512.0
margin_right = 608.0
margin_bottom = 40.0

[node name="PlayerPosition" type="RichTextLabel" parent="."]
margin_left = 800.0
margin_right = 896.0
margin_bottom = 32.0
